--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,16 @@
 h1 {
   font-family: "Shrikhand", serif;
-  font-size: 200px;
-  color: red;
+  font-size: 90px;
+  color: white;
+  background-color: rgb(32, 30, 30);
+  padding: 200px 10px 10px 10px;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-family: "Catamaran", serif;
+  padding: 10px;
+  font-size: 24px;
+  letter-spacing: 2px;
 }
