--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -2,18 +2,20 @@ h1 {
   font-family: "Shrikhand", serif;
   font-size: 90px;
   color: rgb(251, 251, 251);
-  background-color: rgb(32, 30, 30);
   text-align: center;
-  padding: 200px;
 }
 
-.tagline {
+h2 {
   text-align: center;
   font-family: "Catamaran", serif;
   font-size: 18px;
   letter-spacing: 8px;
   color: rgb(251, 251, 251);
   text-align: center;
-  margin: 0 auto;
   font-weight: 200;
+}
+
+.hero {
+  background-color: rgb(32, 30, 30);
+  padding: 200px;
 }
