--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,8 +1,7 @@
 body {
   font-family: "Catamaran", serif;
   font-size: 16px;
-  color: white;
-  background-color: rgb(50, 50, 50);
+  color: rgb(32, 30, 30);
 }
 
 h1 {
@@ -10,7 +9,6 @@ h1 {
   font-size: 90px;
   color: rgb(251, 251, 251);
   text-align: center;
-  padding-top: 200px;
 }
 
 h2 {
@@ -30,7 +28,7 @@ h3 {
 h4 {
   font-family: "Catamaran", serif;
   font-size: 16px;
-  line-height: 22px;
+  line-height: 30px;
 }
 .projects {
   color: rgb(32, 30, 30);
@@ -50,31 +48,30 @@ h4 {
 .hero {
   background-color: rgb(32, 30, 30);
   margin: 0 auto;
-  padding: 220px;
 }
 
 @media (max-width: 576px) {
   h1 {
     font-family: "Shrikhand", serif;
-    font-size: 30px;
+    font-size: 38px;
     color: rgb(251, 251, 251);
     text-align: center;
   }
   h2 {
     font-family: "Catamaran", serif;
-    font-size: 14px;
+    font-size: 18px;
     letter-spacing: 2px;
     color: white;
   }
 
   h3 {
     font-family: "Shrikhand", serif;
-    font-size: 18px;
+    font-size: 32px;
   }
   h4 {
     font-family: "Catamaran", serif;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 16px;
+    line-height: 18px;
     font-weight: lighter;
   }
   .container {
@@ -87,11 +84,12 @@ h4 {
   .hero {
     background-color: rgb(32, 30, 30);
     margin: 0 auto;
-    padding: 60px;
+    padding-top: 160px;
+    padding-bottom: 100px;
   }
   .btn-light {
     font-family: "Catamaran", serif;
-    font-size: 8px;
+    font-size: 12px;
     letter-spacing: 1px;
     justify-content: center;
     text-align: center;
