--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,13 +1,12 @@
 body {
   font-family: "Catamaran", serif;
   font-size: 16px;
-  color: rgb(32, 30, 30);
 }
 
 h1 {
   font-family: "Shrikhand", serif;
   font-size: 90px;
-  color: rgb(251, 251, 251);
+  color: 2C2A2A;
   text-align: center;
 }
 
@@ -16,7 +15,7 @@ h2 {
   font-family: "Catamaran", serif;
   font-size: 18px;
   letter-spacing: 8px;
-  color: rgb(251, 251, 251);
+  color: 2C2A2A;
   text-align: center;
   font-weight: 200;
 }
@@ -46,33 +45,33 @@ h4 {
 }
 
 .hero {
-  background-color: rgb(32, 30, 30);
+  background-color: F7F7F7;
   margin: 0 auto;
-  padding-top: 160px;
+  padding-top: 300px;
   padding-bottom: 100px;
 }
 
 @media (max-width: 576px) {
   h1 {
     font-family: "Shrikhand", serif;
-    font-size: 38px;
-    color: rgb(251, 251, 251);
+    font-size: 30px;
+    color: 2C2A2A;
     text-align: center;
   }
   h2 {
     font-family: "Catamaran", serif;
-    font-size: 18px;
-    letter-spacing: 2px;
-    color: white;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: 2C2A2A;
   }
 
   h3 {
     font-family: "Shrikhand", serif;
-    font-size: 32px;
+    font-size: 28px;
   }
   h4 {
     font-family: "Catamaran", serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 18px;
     font-weight: lighter;
   }
@@ -84,10 +83,10 @@ h4 {
     margin: 0 auto;
   }
   .hero {
-    background-color: rgb(32, 30, 30);
+    background-color: F7F7F7;
     margin: 0 auto;
-    padding-top: 160px;
-    padding-bottom: 100px;
+    padding-top: 320px;
+    padding-bottom: 20px;
   }
   .btn-light {
     font-family: "Catamaran", serif;
@@ -98,4 +97,33 @@ h4 {
     margin: 0 auto;
     display: block;
   }
+
+  li {
+    text-decoration: none;
+  }
+}
+
+li {
+  font-family: "Shrikhand", serif;
+  padding: 1px;
+  text-align: left;
+  text-decoration: none;
+}
+
+.jemlogo {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about {
+  background-color: #2c2a2a;
+  color: #f7f7f7;
+  padding: 40px;
+}
+
+.skills {
+  background-color: #200dff;
+  color: #f7f7f7;
+  padding: 40px;
 }
