--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -7,16 +7,14 @@ h1 {
   font-family: "Shrikhand", serif;
   font-size: 90px;
   color: 2C2A2A;
-  text-align: center;
 }
 
 h2 {
-  text-align: center;
   font-family: "Catamaran", serif;
   font-size: 18px;
   letter-spacing: 8px;
   color: 2C2A2A;
-  text-align: center;
+
   font-weight: 200;
 }
 
@@ -49,6 +47,15 @@ h4 {
   margin: 0 auto;
   padding-top: 300px;
   padding-bottom: 100px;
+  text-align: center;
+}
+
+.about {
+  max-width: 800px;
+  border-radius: 5px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 @media (max-width: 576px) {
