--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -97,18 +97,13 @@ h4 {
     line-height: 18px;
     font-weight: lighter;
   }
-  .container {
-    font-family: "Catamaran", serif;
-    font-size: 12px;
-    text-align: center;
-    max-width: 300px;
-    margin: 0 auto;
-  }
+
   .hero {
     background-color: #f7f7f7;
     margin: 0 auto;
     padding-top: 320px;
     padding-bottom: 20px;
+    margin-top: 20px;
   }
   .btn-light {
     font-family: "Catamaran", serif;
@@ -122,9 +117,10 @@ h4 {
   .about {
     background-color: #2c2a2a;
     color: #f7f7f7;
-    padding: 60px;
+    padding: 40px;
     text-align: justify;
-    border-radius: 0;
+    display: block;
+    width: 350px;
   }
 }
 
