--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -35,11 +35,17 @@ h4 {
   font-size: 16px;
   line-height: 30px;
 }
+
+h5 {
+  font-family: "Catamaran", serif;
+  font-size: 15px;
+  font-weight: 800;
+}
+
 .projects {
   color: rgb(32, 30, 30);
   background-color: #f7f7f7;
-
-  padding: 30px;
+  padding: 20px;
 }
 .btn-light {
   font-family: "Catamaran", serif;
@@ -121,6 +127,18 @@ h4 {
     text-align: justify;
     display: block;
   }
+  .projects {
+    font-size: 14px;
+    padding: 10px;
+    font-family: "Catamaran", serif;
+    color: #2c2a2a;
+    background-color: white;
+    width: 350px;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    display: block;
+  }
 }
 
 .jemlogo {
@@ -141,4 +159,17 @@ h4 {
 
 ul {
   list-style-type: none;
+}
+
+.projects {
+  font-size: 14px;
+  padding: 10px;
+  font-family: "Catamaran", serif;
+  color: #2c2a2a;
+  background-color: white;
+  max-width: 800px;
+  text-align: left;
+  justify-content: center;
+  margin: 0 auto;
+  display: block;
 }
