--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #2c2a2a;
+  --secondary-color: #ff2996;
+  --third-color: #f7f7f7;
+}
+
 body {
   --s: 14px;
   --c1: #292522;
@@ -14,11 +20,11 @@ body {
 h1 {
   font-family: "Shrikhand", serif;
   font-size: 90px;
-  color: #2c2a2a;
+  color: var(--secondary-color);
 }
 
 h1:hover {
-  color: #ff2996;
+  color: var(--primary-color);
 }
 
 h2 {
@@ -82,14 +88,14 @@ h5 {
   h1 {
     font-family: "Shrikhand", serif;
     font-size: 40px;
-    color: #2c2a2a;
+    color: var(--secondary-color);
     text-align: center;
   }
   h2 {
     font-family: "Catamaran", serif;
     font-size: 14px;
     letter-spacing: 1px;
-    color: #2c2a2a;
+    color: var(--primary-color);
   }
 
   h3 {
@@ -104,7 +110,7 @@ h5 {
   }
 
   .hero {
-    background-color: #f7f7f7;
+    background-color: var(--third-color);
     margin: 0 auto;
     padding-top: 320px;
     padding-bottom: 20px;
@@ -120,8 +126,8 @@ h5 {
     display: block;
   }
   .about {
-    background-color: #2c2a2a;
-    color: #f7f7f7;
+    background-color: var(--primary-color);
+    color: var(var(--third-color));
     padding: 40px;
     text-align: justify;
     max-width: 400px;
@@ -130,7 +136,7 @@ h5 {
   .projects {
     font-size: 14px;
     font-family: "Catamaran", serif;
-    color: #2c2a2a;
+    color: var(--primary-color);
     background-color: white;
     width: 350px;
     text-align: center;
@@ -163,11 +169,11 @@ h5 {
 
   nav a {
     text-decoration: none;
-    color: #2c2a2a;
+    color: var(--primary-color);
     transition: all 100ms ease-in-out;
   }
   .footer {
-    background-color: #ff2996;
+    background-color: var(--secondary-color);
     text-align: center;
     font-family: "Catamaran", serif;
     font-size: 8px;
@@ -184,8 +190,8 @@ h5 {
 }
 
 .about {
-  background-color: #2c2a2a;
-  color: #f7f7f7;
+  background-color: var(--primary-color);
+  color: var(var(--third-color));
   padding: 40px;
   text-align: justify;
   max-width: 800px;
@@ -201,8 +207,8 @@ ul {
   font-size: 14px;
   padding: 40px;
   font-family: "Catamaran", serif;
-  color: #2c2a2a;
-  background-color: white;
+  color: var(--primary-color);
+  background-color: var(--third-color);
   max-width: 800px;
   text-align: left;
   justify-content: center;
@@ -210,7 +216,7 @@ ul {
   display: block;
 }
 .contact {
-  background-color: #2c2a2a;
+  background-color: var(--primary-color);
   color: #f7f7f7;
   padding: 40px;
   text-align: justify;
@@ -249,28 +255,28 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #2c2a2a;
+  color: var(--primary-color);
   transition: all 100ms ease-in-out;
 }
 
 nav a:hover {
-  color: #ff2996;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 
 nav ul:hover {
-  color: #ff2996;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 nav li:hover {
-  color: #ff2996;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 .navigation {
   margin-top: 30px;
 }
 navigation:hover {
-  color: #ff2996;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 
@@ -279,7 +285,7 @@ navigation:hover {
   margin: 20px;
   border-radius: 8px;
   font-family: "Catamaran", serif;
-  color: #f7f7f7;
+  color: var(--secondary-color);
   background-color: #200dff;
   font-size: 12px;
   letter-spacing: 1px;
@@ -289,13 +295,13 @@ navigation:hover {
 }
 
 .primaryButton:hover {
-  background-color: #ff2996;
+  background-color: var(--secondary-color);
   cursor: pointer;
 }
 
 .secondaryButton {
   color: #f7f7f7;
-  background-color: #2c2a2a;
+  background-color: var(--third-color);
   border: 1px solid #f7f7f7;
   padding: 10px;
   margin-left: 5px;
@@ -308,18 +314,18 @@ navigation:hover {
 }
 
 .secondaryButton:hover {
-  background-color: #ff2996;
+  background-color: var(--secondary-color);
   cursor: pointer;
 }
 
 .footer {
-  background-color: #ff2996;
+  background-color: var(--secondary-color);
   margin-top: 30px;
   text-align: center;
   font-family: "Catamaran", serif;
   font-size: 12px;
   letter-spacing: 1px;
-  color: #f7f7f7;
+  color: var(--third-color);
   margin-bottom: 30px;
   padding: 20px;
 }
