--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -71,6 +71,41 @@ h5 {
   border: #ead4d4;
 }
 
+.grid-projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+}
+
+.box {
+  background-color: white;
+  padding: 50px 50px 30px 50px;
+  text-align: center;
+}
+
+.box p {
+  font-family: "Catamaran", serif;
+  padding-bottom: 15px;
+}
+
+.visit-button {
+  background-color: #ff2996;
+  color: white;
+  border-radius: 10px;
+  padding: 8px 32px 8px 32px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 16px;
+  font-family: "Catamaran", serif;
+  font-weight: lighter;
+}
+
+.visit-button:hover {
+  background-color: #2c2a2a;
+  color: white;
+  cursor: pointer;
+}
 @media (max-width: 576px) {
   body {
     --s: 70px; /* control the size*/
@@ -132,16 +167,32 @@ h5 {
     max-width: 400px;
     display: block;
   }
-  .projects {
+  .grid-projects {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
+  .visit-button {
+    border-radius: 10px;
     font-size: 14px;
-    font-family: "Catamaran", serif;
-    color: var(--primary-color);
-    background-color: white;
-    width: 350px;
-    text-align: center;
+    font-weight: 500;
+    padding: 8px 30px;
     justify-content: center;
-    margin: 0 auto;
-    display: block;
+    text-align: center;
+  }
+  .box {
+    padding: 50px;
+  }
+
+  .box h3 {
+    font-size: 24px;
+  }
+  .box h4 {
+    font-size: 18px;
+  }
+  .box p {
+    font-size: 14px;
+    padding-bottom: 20px;
   }
   .primarylogo {
     width: 22px;
