--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -331,12 +331,14 @@ navigation:hover {
 }
 
 .primaryButton {
-  padding: 10px;
+  padding: 8px;
   margin: 20px;
   border-radius: 8px;
+  width: 120px;
   font-family: "Catamaran", serif;
   color: var(--third-color);
   background-color: #200dff;
+  font-weight: 700;
   font-size: 12px;
   letter-spacing: 1px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -352,8 +354,10 @@ navigation:hover {
 .secondaryButton {
   color: var(--secondary-color);
   background-color: var(--third-color);
-  border: 1px solid #f7f7f7;
-  padding: 10px;
+  border: none;
+  padding: 8px;
+  font-weight: 700;
+  width: 120px;
   margin-left: 5px;
   border-radius: 8px;
   font-family: "Catamaran", serif;
